src/test/ui/moves/move-guard-same-consts.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/move-guard-same-consts.rs:20:24
   |
LL |         (1, 2) if take(x) => (),
   |                        - value moved here
LL |         (1, 2) if take(x) => (),
   |                        ^ value used here after move
   |
   = note: move occurs because `x` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
